--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:exported="false"
             android:theme="@style/Base.Theme.PlaylistMaker"/>
         <activity
-            android:name=".SearchActivity"
+            android:name=".ui.search.SearchActivity"
             android:exported="false"
             android:theme="@style/Theme.PlaylistMaker.Search"/>
         <activity
