--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
             android:exported="false"
             android:theme="@style/Theme.PlaylistMaker.Settings" />
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.PlaylistMaker.Main">
             <intent-filter>
