--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
         <activity
             android:name=".presentation.media.MediaLibraryActivity"
             android:exported="false"
-            android:theme="@style/Base.Theme.PlaylistMaker" />
+            android:theme="@style/Theme.PlaylistMaker.MediaLibrary" />
         <activity
             android:name=".presentation.search.SearchActivity"
             android:exported="false"
