--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,25 +36,10 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.player.PlayerActivity"
-            android:exported="false"
-            android:theme="@style/Theme.PlaylistMaker.Search" />
-        <activity
-            android:name=".presentation.media.MediaLibraryActivity"
-            android:exported="false"
-            android:theme="@style/Theme.PlaylistMaker.MediaLibrary" />
-        <activity
-            android:name=".presentation.search.SearchActivity"
-            android:exported="false"
-            android:theme="@style/Theme.PlaylistMaker.Search" />
-        <activity
-            android:name=".presentation.settings.SettingsActivity"
-            android:exported="false"
-            android:theme="@style/Theme.PlaylistMaker.Settings" />
-        <activity
-            android:name=".presentation.main.MainActivity"
+            android:name=".presentation.root.RootActivity"
             android:exported="true"
-            android:theme="@style/Theme.PlaylistMaker.Main">
+            android:theme="@style/Theme.PlaylistMaker.Main"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
